--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "luxury-site",
+  "homepage": "https://username.github.io/repo-name",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
