--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luxury-site",
-  "homepage": "/Luxury-Site/",
+  "homepage": "https://abdallahamdy22.github.io/Luxury-Site",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
