--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "luxury-site",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +15,9 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
+    "gapi-script": "^1.2.0",
     "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
